--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
     <p>李健的父亲名叫李九良，原是黑龙江省京剧院武生。李健的妻子孟小蓓比其小5岁，她是清华大学社会学博士，两人从很小的时候就相识了。</p>
     <h2 id="shz">生活照</h2>
     <div>
-        <img src="https://bkimg.cdn.bcebos.com/pic/30adcbef76094b364447adf1a9cc7cd98c109dd1?x-bce-process=image/watermark,g_7,image_d2F0ZXIvYmFpa2UxMTY=,xp_5,yp_5"
-            alt="图一" width="400">
+        <img src="1.png" alt="图一" width="400">
     </div>
     <div>
-        <img src="https://bkimg.cdn.bcebos.com/pic/0823dd54564e9258c74837f29682d158ccbf4ea9?x-bce-process=image/watermark,g_7,image_d2F0ZXIvYmFpa2UxMTY=,xp_5,yp_5"
-            alt="图二" width="400">
+        <img src="2.png" alt="图二" width="400">
     </div>
 </body>
