第四次修改图片，改正了图片名称png-jpg送

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <p>李健的父亲名叫李九良，原是黑龙江省京剧院武生。李健的妻子孟小蓓比其小5岁，她是清华大学社会学博士，两人从很小的时候就相识了。</p>
     <h2 id="shz">生活照</h2>
     <div>
-        <img src="1.png" alt="图一" width="400">
+        <img src="1.jpg" alt="图一" width="400">
     </div>
     <div>
-        <img src="2.png" alt="图二" width="400">
+        <img src="2.jpg" alt="图二" width="400">
     </div>
 </body>
